--- a/src/sections/_join-quiz.scss
+++ b/src/sections/_join-quiz.scss
@@ -2,17 +2,25 @@ section.join-quiz {
   background: linear-gradient(#1668a5, #7d2a8a, #f881ae);
   display: block;
   text-align: center;
-  padding: 6% 20%;
+  padding: 6% 10%;
 }
 
 .join-quiz h3 {
-  font: bold 36px/46px Inter, 'PT Sans', sans-serif;
+  font: bold 36px/48px Inter, 'PT Sans', sans-serif;
   color: #ffffff;
+
+  @media (max-width: 768px) {
+    font: bold 24px/36px Inter, 'PT Sans', sans-serif;
+  }
 }
 
 .join-quiz p {
-  font: 24px/48px Inter, 'PT Sans', sans-serif;
+  font: 24px/36px Inter, 'PT Sans', sans-serif;
   color: #ffffff;
+
+  @media (max-width: 768px) {
+    font: 18px/24px Inter, 'PT Sans', sans-serif;
+  }
 }
 
 button.join-quiz {
@@ -23,4 +31,8 @@ button.join-quiz {
   // width: 461px;
   color: #7d2a8a;
   padding: 21px 26px;
+
+  @media (max-width: 768px) {
+    font: bold 18px/18px Inter, 'PT Sans', sans-serif;
+  }
 }
