--- a/src/sections/_what-do-colors-mean.scss
+++ b/src/sections/_what-do-colors-mean.scss
@@ -1,5 +1,5 @@
 section#what-do-colors-mean {
-  padding: 6% 0;
+  padding: 6% 5%;
 }
 
 #meet-your-colors {
@@ -24,7 +24,7 @@ section#what-do-colors-mean {
   padding: 0;
   width: 100%;
   display: flex;
-  justify-content: space-between;
+  justify-content: space-around;
   flex-wrap: wrap;
 }
 
